# dem2d-rs

./: Cargo.toml
examples/: bouncing_ball.rs  cs_visual_example.rs  hopper.rs  normal_impact.rs  plot_neighbours.py
src/: base.rs  contact_search.rs  dem.rs  geometry.rs  integrator.rs  lib.rs  math.rs  save_data.rs
src/physics/: mod.rs
src/physics/bonded_dem/: equations.rs  mod.rs  tests.rs
src/physics/dem/: equations.rs  mod.rs
tests/: test_contact_search.rs  test_dem.rs
